# finreport

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
core/analysis/: weekly_pipeline
core/charts/: make_charts.py
core/data/: PolygonAPICheck.ipynb  db.py  enrich_fulltext.py  finance_hints.py  keywords.py  polygon_news.py  summarize_text.py  tiingo_news.py
core/llm/: llm.py
core/render/: render.py  render_md.py  template.html
core/selectors/: articles_scoring.ipynb  select_finance_yahoo.py
core/summarize/: map_reduce.py  news_raw_schema.ipynb
data/: README.md  actuals_nvda_q3-fy2026.json  expectations_nvda_q3-fy2026.json  gap_analysis_nvda_q3-fy2026.json
data/earnings_transcripts/NVDA/: NVDA_Q1_FY2026_2025-05-28.txt  NVDA_Q2_FY2026_2025-08-27.txt  NVDA_Q3_FY2026_2025-11-19.txt
migrations/: 002_add_press_release_columns.sql  003_standardize_timestamps.sql  004_add_event_timestamps.sql  add_validation_columns.sql  align_with_tiingo_api.sql  create_earnings_tables.sql
notebooks/: explore_news_data.ipynb  visualize_ohlc.ipynb
scripts/: NotebookCheck2.ipynb  cron_ingest.sh  enrich_fulltext.py  enrich_summary_keywords.py  generate_report.py  ingest_nvda_tsla.py  ingest_tickers.py  make_period_report.py  make_ticker_period_summary.py  notebookCheck.ipynb  validate_news_data.py
src/aifinreport/: config.py
src/aifinreport/agents/: earnings_analyst.py  gap_analyzer.py  news_period_analyst.py  news_ranker.py  pre_event_summarizer.py  press_release_extractor.py
src/aifinreport/analysis/: selection.py  summarization.py
(+12 files in other folders)
